--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -1,19 +1,18 @@
 <html>
-    <head>
-        <title></title>
-        <script type="module" src="./lib/dentravak-app.js"></script>
-        <script src="lib/example.js"></script>
-        <!-- <script type="module">
-            import './lib/dentravak-app.js'; 
-        </script> -->
-    </head>
-    <body>
-        <div><dt-app></dt-app></div>
 
-        <p>Test </p>
-        <p>Test  </p>
-        <popup-info img="img/alt.png" text="Your card validation code (CVC)
-  is an extra security feature — it is the last 3 or 4 numbers on the
-  back of your card.">
-    </body>
+<head>
+    <title></title>
+    <script type="module" src="lib/dentravak-sandwich-list.js"></script>
+    <script type="module" src="./lib/dentravak-app.js"></script>
+</head>
+
+<body>
+    <h1>Dit is een test</h1>
+
+    <dt-app>
+        <dt-sandwich-list></dt-sandwich-list>
+    </dt-app>
+
+</body>
+
 </html>
