--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -2,16 +2,16 @@
 
 <head>
     <title></title>
-    <script type="module" src="lib/dentravak-sandwich-list.js"></script>
-    <script type="module" src="./lib/dentravak-app.js"></script>
+    <script src="lib/dentravak-sandwich-list.js"></script>
+    <script src="./lib/dentravak-app.js"></script>
 </head>
 
 <body>
-    <h1>Dit is een test</h1>
+    <!-- <h1>Dit is een test</h1> -->
 
-    <dt-app>
+    <!-- <dt-app> -->
         <dt-sandwich-list></dt-sandwich-list>
-    </dt-app>
+    <!-- </dt-app> -->
 
 </body>
 
