frontend js; show sandwichlist

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -1,17 +1,22 @@
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
     <title></title>
-    <script src="lib/dentravak-sandwich-list.js"></script>
-    <script src="./lib/dentravak-app.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 </head>
 
 <body>
-    <!-- <h1>Dit is een test</h1> -->
 
-    <!-- <dt-app> -->
-        <dt-sandwich-list></dt-sandwich-list>
-    <!-- </dt-app> -->
+    <div class="container">
+            <dt-app></dt-app>
+    </div>
+
+    <script type="module" src="./lib/dentravak-app.js"></script>
+    <script src="./lib/utils.js"></script>
+
 
 </body>
 
