--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -1,23 +1,17 @@
 <!doctype html>
 <html lang="en">
+    <head>
+        <title>Den Travak</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<head>
-    <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    </head>
+    <body>
+        <div class="container">
+                <dt-app></dt-app>
+        </div>
 
-</head>
-
-<body>
-
-    <div class="container">
-            <dt-app></dt-app>
-    </div>
-
-    <script type="module" src="./lib/dentravak-app.js"></script>
-    <script src="./lib/utils.js"></script>
-
-
-</body>
-
+        <script src="./lib/utils.js"></script>
+        <script type="module" src="./lib/dentravak-app.js"></script>
+    </body>
 </html>
