Admin page created

--- a/src/main/resources/webapp/admin.html
+++ b/src/main/resources/webapp/admin.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="en">
-    <!-- In bash to webapp: http-server, also backend running -> surfing to given address -->
     <head>
-        <title>Den Travak</title>
+        <title>Login - Den Travak</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -17,8 +16,7 @@
     </head>
     <body>
         <div class="container">
-            <!-- Custom tag -->    
-            <dt-app></dt-app>
+            <dt-admin></dt-admin>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -27,7 +25,7 @@
         <script src="https://unpkg.com/navigo@6"></script> 
 
         <script src="./lib/utils.js"></script>
-        <script type="module" src="./lib/dentravak-app.js"></script>
+        <script type="module" src="./lib/admin/dentravak-admin.js"></script>
 
         <template id="styletemplate">
             <style>
